# libmsg

./: CMakeLists.txt  LICENSE  README.md
cmake/: 3rd_catch2.cmake  3rd_libuv.cmake  3rd_ragel.cmake
include/: codec.hpp  context.hpp  endpoint.hpp  logging.h  types.hpp  uri.hpp  wire.hpp
src/: CMakeLists.txt  codec.cc  context.cc  endpoint.cc  logging.cc  uri.rl
src/impl/: acceptor_base.hpp  reactor_base.hpp  session_wrap.hpp
src/impl/codec/: http_codec.hpp  http_header.rl  utils.hpp
src/impl/uv/: uvacceptor.hpp  uvreactor.hpp
test/: CMakeLists.txt  notest_server.cc
